V6815: Added missing changed from previous commit

--- a/Prevu.Synoptics.V6815_Enviroo/Details/D970.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Details/D970.xaml
@@ -18,14 +18,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="62" VerticalAlignment="Top" Canvas.Top="43" StatusComponent="970-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="74" HorizontalAlignment="Center" Color="Air"/>
-        <Labels:Pipe Width="64" VerticalAlignment="Center" Canvas.Top="308" StatusComponent="970-03-EC1" RenderTransformOrigin="0.5,0.5" Canvas.Left="82" HorizontalAlignment="Left" Color="Air">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="52" VerticalAlignment="Top" Canvas.Top="391" StatusComponent="970-02-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="88" HorizontalAlignment="Center" Color="Air">
+        <Labels:Pipe Width="104" VerticalAlignment="Top" Canvas.Top="346" StatusComponent="970-03-ME1" RenderTransformOrigin="0.5,0.5" Canvas.Left="62" HorizontalAlignment="Center" Color="Air">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -34,12 +27,10 @@
         </Labels:Pipe>
         <Machines:V01_EC_FiltroManiche Canvas.Top="79" HorizontalAlignment="Left" Height="246" VerticalAlignment="Center" Width="190" Canvas.Left="30"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="101" Canvas.Top="18" Height="51" Width="51" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VS_Airlock Canvas.Left="87" Canvas.Top="334" Height="55" Width="54" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:Waste Height="54" Width="60" Canvas.Left="84" Canvas.Top="394" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="970-03-EC1" SignalName="LSH" Canvas.Left="79" Canvas.Top="271"/>
+        <Machines:Waste Height="54" Width="60" Canvas.Left="84" Canvas.Top="376" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="970-03-ME1" SignalName="LSH" Canvas.Left="79" Canvas.Top="271"/>
         <Labels:DeviceLabel ComponentName="970-01-MA1" Canvas.Left="159" Canvas.Top="19" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="970-03-EC1" Canvas.Left="191" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="970-02-MA1" Canvas.Left="146" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:SignalLabel ComponentName="970-03-EC1" SignalName="LSH2" Canvas.Left="135" Canvas.Top="406" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="970-03-ME1" Canvas.Left="191" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:SignalLabel ComponentName="970-03-ME1" SignalName="LSH2" Canvas.Left="120" Canvas.Top="345" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
