--- a/Prevu.Synoptics.V6815_Enviroo/OverallView.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/OverallView.xaml
@@ -369,8 +369,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="8498" Canvas.Top="4112" Width="426" StatusComponent="970-01-MA1" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Canvas.Left="8550" Canvas.Top="4033" Width="375" StatusComponent="532-01-MA1" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="8498" Canvas.Top="4176" Width="426" StatusComponent="970-01-MA1" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="8550" Canvas.Top="4107" Width="412" StatusComponent="532-01-MA1" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="7736" Canvas.Top="3624" Width="766" StatusComponent="970-01-MA1" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="7307" Canvas.Top="3762" Width="99" StatusComponent="532-01-MA1" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="7293" Canvas.Top="3653" Color="Air" Width="222" StatusComponent="532-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -381,14 +381,14 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="7402" Canvas.Top="3544" Width="1152" StatusComponent="532-01-MA1" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Canvas.Left="8255" Canvas.Top="3869" Color="Air" Width="490" StatusComponent="970-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="8223" Canvas.Top="3901" Color="Air" Width="554" StatusComponent="970-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="8306" Canvas.Top="3789" Color="Air" Width="492" StatusComponent="532-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="8269" Canvas.Top="3826" Color="Air" Width="566" StatusComponent="532-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -560,6 +560,31 @@
         <Labels:Pipe Canvas.Left="5726" Canvas.Top="1186" PipeHeight="Medium" Width="492" StatusComponent="234-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="6690" Canvas.Top="1187" PipeHeight="Medium" Width="606" StatusComponent="244-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="7206" Canvas.Top="842" PipeHeight="Medium" Width="90" StatusComponent="244-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="8610" Canvas.Top="4039" Width="298" StatusComponent="970-01-MA1" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6405" Canvas.Top="3416" Width="2209" StatusComponent="970-01-MA1" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="8299" Canvas.Top="3728" Color="Air" Width="626" StatusComponent="970-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="4972" Canvas.Top="3416" Width="1420" StatusComponent="970-01-MA1" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4932" Canvas.Top="4009" Width="44" StatusComponent="970-01-MA1" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="4757" Canvas.Top="3794" Color="Air" Width="434" StatusComponent="970-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="4901" Canvas.Top="3487" Color="Air" Width="146" StatusComponent="970-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-32-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <local:P020 d:CacheMode="BitmapCache" Canvas.Left="69" Canvas.Top="126" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P100 d:CacheMode="BitmapCache" Canvas.Left="1694" Canvas.Top="745" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P140 d:CacheMode="BitmapCache" Canvas.Left="3244" Canvas.Top="126" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
@@ -573,7 +598,7 @@
         <local:P430 d:CacheMode="BitmapCache" Canvas.Left="3439" Canvas.Top="3424" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P460 d:CacheMode="BitmapCache" Canvas.Left="4873" Canvas.Top="3457" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P530 d:CacheMode="BitmapCache" Canvas.Left="6474" Canvas.Top="3437" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P810 d:CacheMode="BitmapCache" Canvas.Left="7814" Canvas.Top="3953" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <local:P810 d:CacheMode="BitmapCache" Canvas.Left="7844" Canvas.Top="3998" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P081 Canvas.Left="185" Canvas.Top="1688" d:IsLocked="True"/>
     </Canvas>
 </UserControl>
