--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P530.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P530.xaml
@@ -9,14 +9,14 @@
              x:Class="Prevu.Synoptics.P530" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="54" StatusComponent="920-01-EC1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1037" Canvas.Top="211" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air">
+        <Labels:Pipe Width="54" StatusComponent="970-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1037" Canvas.Top="211" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="177" StatusComponent="920-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1062" Canvas.Top="186" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="177" StatusComponent="970-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1062" Canvas.Top="186" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="252" StatusComponent="463-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="396" Canvas.Top="313" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -116,24 +116,24 @@
         <Machines:V01_DCE_Centrifuge Canvas.Left="278" Canvas.Top="178" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_ALV_VibratingFeeder Canvas.Left="1031" Canvas.Top="338" Height="95" Width="182" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_EC_ExternalPoweredDevice Canvas.Left="1275" Canvas.Top="352" Height="38" Width="43" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:VRC_WaterCollectingTank Canvas.Left="1041" Canvas.Top="226" Width="30" Height="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1026" Canvas.Top="233" Height="60" Width="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1232" Canvas.Top="435" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VS_Airlock Canvas.Left="1309" Canvas.Top="523" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="1308" Canvas.Top="621" Height="43" Width="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1214" Canvas.Top="629" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="158" RenderTransformOrigin="0.5,0.5" Canvas.Left="1188" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="406" Canvas.Top="517" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="530-01-MA1" Canvas.Left="561" Canvas.Top="484" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="532-01-MA1" Width="96" Canvas.Left="656" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="250"/>
-        <Labels:JumpLabel JumpFromLabel="526-DCE" JumpToLabel="463-01-MA1" Canvas.Left="26" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="532-01-MA1" JumpToLabel="970-FILTER" Canvas.Left="782" Canvas.Top="293" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="556-01-MA1" Canvas.Left="1094" Canvas.Top="243" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="568-TRP" JumpToLabel="808-01-MA1" Canvas.Left="1416" Canvas.Top="619" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="557-01-ME1" Canvas.Left="1177" Canvas.Top="313" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:VRC_WaterCollectingTank Canvas.Left="1041" Canvas.Top="226" Width="30" Height="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VS_Airlock Canvas.Left="1026" Canvas.Top="233" Height="60" Width="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="556-01-MA1" JumpToLabel="970-FILTER" Canvas.Left="1206" Canvas.Top="155" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="532-01-MA1" JumpToLabel="970-FILTER" Canvas.Left="782" Canvas.Top="293" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="568-TRP" JumpToLabel="808-01-MA1" Canvas.Left="1416" Canvas.Top="619" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="526-DCE" JumpToLabel="463-01-MA1" Canvas.Left="26" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="406" Canvas.Top="517" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="526-DCE" DetailsPageName="D526" Canvas.Left="317" Canvas.Top="123" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="548-TRP" DetailsPageName="D548" Canvas.Left="688" Canvas.Top="569" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="568-TRP" DetailsPageName="D568" Canvas.Left="1251" Canvas.Top="569" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="530-01-MA1" Canvas.Left="561" Canvas.Top="484" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="532-01-MA1"  Canvas.Left="659" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Top="248"/>
+        <Labels:DeviceLabel ComponentName="556-01-MA1" Canvas.Left="1094" Canvas.Top="243" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="557-01-ME1" Canvas.Left="1177" Canvas.Top="313" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
