--- a/Prevu.Synoptics.V6815_Enviroo/Details/D376.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Details/D376.xaml
@@ -8,7 +8,7 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="386" MinWidth="380">
+    <Canvas Height="386" Width="380">
         <Machines:V01_SCW_Screw_wHopper Height="366" Width="360" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="10" Canvas.Left="10"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="376-41-LEV" SignalName="LSH" Canvas.Left="23" Canvas.Top="156" />
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="376-41-LEV" SignalName="LSL" Canvas.Left="37" Canvas.Top="222"/>
